# shamir_secret_sharing

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
License/: LICENSE-APACHE.txt
examples/: init_error_handling.rs  usage.rs  with_fixed_1024bit_prime.rs  with_fixed_256bit_prime.rs  with_fixed_512bit_prime.rs  with_generated_1024bit_prime.rs  with_generated_256bit_prime.rs  with_generated_512bit_prime.rs
src/: lib.rs  main.rs
tests/: test.rs
