[package]
name = "secretsharing_shamir"
version = "0.1.0"
authors = ["Pushpendra Pal pushpadevl@outlook.com"]
edition = "2021"
description = "A Rust cryptographic library for Shamir's Secret Sharing with support for multiple prime sizes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/pushpadevl/shamir_secret_sharing"
keywords = ["cryptography", "secret-sharing", "shamir", "bigint","random","lagrange","interpolation","reconstruct","pseudorandom","threshold","prime","polynomial"]
categories = ["cryptography", "algorithms", "mathematics", "password","secret-sharing"]
documentation = "https://docs.rs/secretsharing-shamir"
readme = "README.md"

[dependencies]
rand = "0.8"
num-bigint = { version = "*", features = ["rand"] }
fmt = "0.1.0"
num-traits = "0.2.19"
num-primes = "0.3.0"
proptest = "1.7.0"

[lib]
path = "src/lib.rs"
